[package]
name = "softmew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[lints.clippy]
correctness = "forbid"
suspicious = "warn"
perf = "deny"
style = "deny"
pedantic = "warn"

[profile.release]
debug = true
panic = "abort"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "reset"
harness = false
